Add very crude memory GUI