@@ -1,5 +1,6 @@
 package me.ialistannen.mimadebugger.machine.instructions.defaultinstructions;
 
+import java.util.Arrays;
 import java.util.List;
 import me.ialistannen.mimadebugger.machine.instructions.ImmutableInstruction;
 import me.ialistannen.mimadebugger.machine.instructions.Instruction;
@@ -21,6 +22,6 @@ public class Arithmetic {
 
 
   public static List<Instruction> getInstructions() {
-    return List.of(ADD);
+    return Arrays.asList(ADD);
   }
 }
