@@ -1,5 +1,6 @@
 package me.ialistannen.mimadebugger.machine.instructions.defaultinstructions;
 
+import java.util.Arrays;
 import java.util.List;
 import me.ialistannen.mimadebugger.machine.instructions.ImmutableInstruction;
 import me.ialistannen.mimadebugger.machine.instructions.Instruction;
@@ -22,7 +23,7 @@ public class Equality {
 
 
   public static List<Instruction> getInstructions() {
-    return List.of(EQUAL);
+    return Arrays.asList(EQUAL);
   }
 
 }
