@@ -1,5 +1,6 @@
 package me.ialistannen.mimadebugger.machine.instructions.defaultinstructions;
 
+import java.util.Arrays;
 import java.util.List;
 import me.ialistannen.mimadebugger.machine.instructions.ImmutableInstruction;
 import me.ialistannen.mimadebugger.machine.instructions.Instruction;
@@ -14,7 +15,7 @@ public class Special {
 
 
   public static List<Instruction> getInstructions() {
-    return List.of(HALT);
+    return Arrays.asList(HALT);
   }
 
 }
